Chasma-326: Added forgot password functionality to the application
